...
    <string name="settings_facets_title">Facets</string>
    <string name="settings_facets_subtitle">Create and manage facet-specific settings</string>
    <string name="settings_change_wallpaper_title">Change wallpaper</string>
    <string name="settings_change_wallpaper_subtitle">Change your system wallpaper</string>
    <string name="settings_appearance_title">Launcher Appearance</string>
    <string name="settings_appearance_subtitle">Theme, accent, icons, fonts</string>
    <string name="settings_clock_calendar_title">Clock Style</string>
    <string name="settings_time_format_24h">24-hour time</string>
    <string name="settings_time_format_12h">12-hour time</string>
    <string name="settings_calendars_title">Calendars to display</string>
    <plurals name="settings_calendars_selected">
        <item quantity="one">%1$d calendar selected</item>
        <item quantity="other">%1$d calendars selected</item>
...
